[tool.poetry]
name = "pyrh"
version = "2.0"
description = "Unofficial Robinhood Python API"
authors = [
    "Unofficial Robinhood Python API Developers"
]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/georgianpartners/foreshadow"
repository = "https://github.com/georgianpartners/foreshadow"
keywords = [
    "trading",
    "options",
    "robinhood",
    "stock",
    "api"
]
include = [
    "pyproject.toml",
    "README.rst",
    "CONTRIBUTORS",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.23"
python-dateutil = "^2.8"

# docs need to be distributed for readthedocs
sphinx = { version = "^2.4.4", optional = true }
sphinx-autodoc-typehints = { version = "^1.10.3", optional = true }
sphinx_rtd_theme = { version = "^0.4.3", optional = true }
autodocsumm = { version = "^0.1.13", optional = true }
toml = { version = "^0.10.0", optional = true }

[tool.poetry.dev-dependencies]
# Linting
flake8 = "3.7.9"
flake8-docstrings = "^1.5.0"
black = { version = "19.10b0", python = "^3.6" }
isort = { version = "4.3.21", extras = ["pyproject"] }
seed-isort-config = { version = "2.1.0", python = "^3.7" }
mypy = "^0.770"

# Testing
pytest = "^5.4.1"
pytest-mock = "^2.0.0"
requests-mock = "^1.7.0"
coverage = "^5.0.4"
pytest-cov = "^2.8.1"
xdoctest = "^0.11.0"

# Automation
towncrier = "^19.2.0"

[tool.poetry.extras]
doc = ["sphinx", "sphinx-autodoc-typehints", "sphinx_rtd_theme", "autodocsumm", "toml"]

[tool.black]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
known_first_party = 'robinhood'
known_third_party = ["dateutil", "pytest", "requests", "requests_mock"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
