[tool.poetry]
name = "pyrh"
version = "2.1.2"
description = "Unofficial Robinhood Python API"
authors = [
    "Unofficial Robinhood Python API Developers"
]
license = "MIT"
readme = "README.rst"
homepage = "https://pyrh.readthedocs.io/en/latest"
repository = "https://pyrh.readthedocs.io/en/latest"
keywords = [
    "trading",
    "options",
    "robinhood",
    "stock",
    "api"
]
include = [
    "pyproject.toml",
    "README.rst",
    "CONTRIBUTORS",
    "LICENSE"
]

[tool.poetry.dependencies]
python = "^3.8.1"

# Doc Dependencies (need to be distributed for readthedocs)
autodocsumm = { version = "^0.2.9", optional = true }
sphinx = { version = "^5.3.0", optional = true }
sphinx-autodoc-typehints = { version = "^1.19.5", optional = true }
sphinx_rtd_theme = { version = "^1.1.1", optional = true }

# Main Dependencies
marshmallow = "^3.5.1"
python-dateutil = "^2.8"
pytz = "^2022.7.1"
requests = "^2.23"
yarl = "^1.4.2"
certifi = "^2022.12.7"
pyotp = "^2.8.0"

# Jupyter
notebook = { version = "^6.0.3", optional = true }
python-dotenv = { version = "^0.13.0", optional = true }


[tool.poetry.group.dev.dependencies]

# Linting
# These are version locked to the same versions as `.pre-commit-config.yaml`
flake8 = "6.0.0"
flake8-docstrings = "1.6.0"
flake8-bugbear = "^22.10.27"
black = "22.10.0"
isort = "5.12.0"
mypy = "0.991"
nbstripout = "0.6.1"
# TODO: re-enable darglint but it currently makes flake8 un-reasonably slow
# darglint = "1.8.1"

# Testing
coverage = "^6.5.0"
freezegun = "^1.2.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.10.0"
requests-mock = "^1.10.0"

# Automation
towncrier = "^22.8.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-autodoc-typehints", "sphinx_rtd_theme", "autodocsumm"]
notebook = ["notebook", "python-dotenv"]

# Tool Configuration

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
strict = true
disallow_untyped_decorators = false

[tool.towncrier]
directory = "newsfragments"
package = "pyrh"
package_dir = "pyrh"
filename = "docs/changelog.rst"

# TODO: Remove ignored typing errors
# [["tool.mypy-*.robinhood"]]
# ignore_errors = true
# [["tool.mypy-*.urls"]]
# ignore_errors = true
# [["tool.mypy-tests.robinhood"]]
# ignore_errors = true

[tool.coverage.run]
branch = true
omit = [
    "tests/*",
    "docs/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:"
]

[tool.pytest.ini_options]
# use --no-cov in PyCharm to override pytest-cov and enable builtin coverage
addopts = "-vv -x --cov=pyrh --cov-report=term --cov-report=html"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
