[metadata]
description-file = README.md

[coverage:run]
branch = true
source = pyrh
omit =
    tests/*
    docs/*

[coverage:report]
exclude_lines =
    pragma: no cover
    raise AssertionError
    raise NotImplementedError
    if __name__ == .__main__.:

# flake8
[flake8]
# temporarily exclude tests folder
max-line-length = 88
exclude = .git,__pycache__,docs/*,build,dist,.tox,tests/*
ignore =
    W503 # Line break occurred after a binary operator (opposite of W504)
    D107 # Missing docstring in __init__
    D301 # Use r""" if any backslashes in a docstring
max-complexity = 12
# TODO: remove docstring exemptions after refactor
per-file-ignores =
    pyrh/endpoints.py: D
    pyrh/exceptions.py: D
    pyrh/robinhood.py: D
    pyrh/trade_history_downloader.py: D
    tests/*: D

# Migrate to pyproject.toml when: https://gitlab.com/pycqa/flake8/issues/428

# pytest
[tool:pytest]
addopts = -vv -x --xdoc --cov=pyrh --cov-config=setup.cfg --cov-report=term --cov-report=html
# for pycharm add --no-cov to the configuration to make covearge work

# Migrate to pyproject.toml after https://github.com/pytest-dev/pytest/issues/1556

[mypy]
ignore_missing_imports = True
